objects/Wiki__c.object
<CustomObject>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>NewMemberProfile__c</fullName>
        <label>NewMemberProfile</label>
        <referenceTo>WikiProfile__c</referenceTo>
        <relationshipLabel>Wikis (NewMemberProfile)</relationshipLabel>
        <relationshipName>Wikis</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PictureId__c</fullName>
        <label>PictureId</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PublicProfile__c</fullName>
        <label>PublicProfile</label>
        <referenceTo>WikiProfile__c</referenceTo>
        <relationshipLabel>Wikis (Public Profile)</relationshipLabel>
        <relationshipName>Wikis1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>open</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>closed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>private</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Wiki</label>
    <nameField>
        <label>Wiki Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Wikis</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>